Fixed the long text wrapping problem on different browsers

--- a/css/custom.css
+++ b/css/custom.css
@@ -88,3 +88,8 @@
     -webkit-margin-end: 0px;
     font-weight: 700;
 }
+
+
+div {
+  word-wrap: break-word;
+}
